--- a/0x02-CSS_advanced/styles/2-style.css
+++ b/0x02-CSS_advanced/styles/2-style.css
@@ -8,19 +8,17 @@ body {
 }
 
 a {
-  color: ##161616;
+  color: #161616;
 }
 
 .visually-hidden {
   display: none;
 }
 
-
 .card-category {
-    color: #D73953;
+  color: #d73953;
 }
 
-
 .section-tagline {
-    color: #D73953;
+  color: #d73953;
 }
