--- a/0x02-CSS_advanced/styles/13-style.css
+++ b/0x02-CSS_advanced/styles/13-style.css
@@ -40,7 +40,7 @@ body {
   line-height: var(--line-height-base);
 }
 
-a[href] {
+a:any-link {
   color: var(--text-color);
   text-decoration: none;
 }
