--- a/0x02-CSS_advanced/styles/19-style.css
+++ b/0x02-CSS_advanced/styles/19-style.css
@@ -502,10 +502,10 @@ a:active {
   margin-right: auto;
 }
 
-ul .row {
+ul.row {
   margin: 0;
   padding: 0;
-  list-style-type: none;
+  list-style: none;
 }
 
 .col-1-3 {
