--- a/0x02-CSS_advanced/styles/22-style.css
+++ b/0x02-CSS_advanced/styles/22-style.css
@@ -537,10 +537,10 @@ h6 {
   padding: 0.5rem;
 }
 
-[data-section-theme="“dark”"] {
+html[data-section-theme="“dark”"] {
   --text-color: var(--color-white);
   --section-title-color: var(--color-white);
-  background-color: var(--color-black);
+  --background-color: var(--color-black);
 }
 
 .footer-copyright {
