--- a/0x02-CSS_advanced/styles/22-style.css
+++ b/0x02-CSS_advanced/styles/22-style.css
@@ -538,13 +538,9 @@ h6 {
 }
 
 [data-section-theme="dark"] {
-  --text-color: var(--color-white); /* Redefine text-color to color-white */
-  --section-title-color: var(
-    --color-white
-  ); /* Redefine section-title-color to color-white */
-  background-color: var(
-    --color-black
-  ); /* Set background to the variable color-black */
+  --text-color: var(--color-white);
+  --section-title-color: var(--color-white);
+  background-color: var(--color-black);
 }
 
 .footer-copyright {
