--- a/0x02-CSS_advanced/styles/23-style.css
+++ b/0x02-CSS_advanced/styles/23-style.css
@@ -545,10 +545,9 @@ h6 {
 
 .social-link {
   display: block;
-}
-
-.social-link svg {
-  color: var(--text-color);
+  & svg {
+    fill: var(--text-color);
+  }
 }
 
 .footer-address {
