--- a/0x02-CSS_advanced/styles/23-style.css
+++ b/0x02-CSS_advanced/styles/23-style.css
@@ -543,16 +543,17 @@ h6 {
   background-color: var(--color-black);
 }
 
-.footer-address {
-  color: var(--text-color);
-}
-
 .social-link {
   display: block;
-  & svg {
-    fill: var(--text-color);
-  }
 }
+
+/* .social-link svg {
+  color: var(--text-color);
+} */
+
+/* .footer-address {
+  color: var(--text-color);
+} */
 
 .footer-copyright {
   margin: 0;
