Fix issues for dark theme

--- a/0x02-CSS_advanced/styles/23-style.css
+++ b/0x02-CSS_advanced/styles/23-style.css
@@ -551,9 +551,9 @@ h6 {
   color: var(--text-color);
 } */
 
-/* .footer-address {
+.footer-address {
   color: var(--text-color);
-} */
+}
 
 .footer-copyright {
   margin: 0;
