--- a/0x02-CSS_advanced/styles/23-style.css
+++ b/0x02-CSS_advanced/styles/23-style.css
@@ -547,9 +547,9 @@ h6 {
   display: block;
 }
 
-/* .social-link svg {
-  color: var(--text-color);
-} */
+.social-link > svg {
+  fill: var(--text-color);
+}
 
 .footer-address {
   color: var(--text-color);
