--- a/0x02-CSS_advanced/styles/29-style.css
+++ b/0x02-CSS_advanced/styles/29-style.css
@@ -462,6 +462,11 @@ body {
   height: 20%;
 }
 
+.nav .nav-item:hover .nav-link::before {
+  background-color: var(--color-primary);
+  width: 100%;
+}
+
 a:link {
   color: var(--text-color);
   text-decoration: none;
