--- a/0x03-responsive_design/100-styles.css
+++ b/0x03-responsive_design/100-styles.css
@@ -985,7 +985,7 @@ ul.row {
   margin: 0 2rem;
 }
 
-@media screen and (max-width: 767px) {
+@media (max-width: 767px) {
   .post {
     flex-direction: column;
     margin: 2rem;
